--- a/Bidayat/main_app/templates/base.html
+++ b/Bidayat/main_app/templates/base.html
@@ -53,7 +53,11 @@
           <div class="popup-content">
               <span class="close" id="closeButton"> X </span>
               <p>Tell us more about yourself:</p>
+              <img src="https://i.ibb.co/vqJssFx/1683807.png" alt="logo" width="40%" >
+              <img src="https://i.ibb.co/J5sT7VD/2933787.png" alt="logo" width="40%" >
              <button ><a href="{% url 'customer' %}"> Customer </a></button> 
+      
+
              <button > <a href="{% url 'vendor' %}"> Vendor </a></button> 
           </div>
         </div>
@@ -84,13 +88,12 @@
         transform: translate(-50%, -50%);
         border: 1px solid #ccc;
         background-color: white;
-        padding: 20px;
+        padding: 7%;
         box-sizing: border-box;
         z-index: 1;
         max-height: 80vh; 
         overflow-y: auto;
         margin: auto;
-       
         text-align: center;
         justify-content: center;
         font-size: 22px;
