--- a/Bidayat/main_app/templates/index.html
+++ b/Bidayat/main_app/templates/index.html
@@ -22,7 +22,7 @@
   <section>
     <div class=" reveal">
   <img src="../static/images/symbol.png" alt="logo" width="20px" >
-  <p width="100px">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+  <p width="100px">"Bidayat, Becuase Every Occassion Is A New Beginnings For Something, and Someone..." - Amira Zahid</p>
 </div>
 </div>
 </section>
