--- a/Bidayat/main_app/templates/works/categoryworks.html
+++ b/Bidayat/main_app/templates/works/categoryworks.html
@@ -65,10 +65,11 @@
     }
 
     .card-img {
-      height: 50vh;
-      cursor: pointer;
-    }
-
+  height: 50vh;
+  width: 100%;
+  object-fit: cover;
+  cursor: pointer;
+}
 
     .card-title {
       text-align: left;
