--- a/Bidayat/main_app/templates/works/detail.html
+++ b/Bidayat/main_app/templates/works/detail.html
@@ -59,10 +59,10 @@
     {% endfor %}
   
   
-  <div>
+  <!-- <div>
       <button class="btn"><a href="{% url 'works_update' work.id  %}">Edit</a></button>
       <button class="btn"><a href="{% url 'works_delete' work.id %}">Delete</a></button>
-    </div>
+    </div> -->
   
   </div>
 
